frontend/public/stylesheet.css
:root {
    --primary-color: rgb(103, 28, 103);
    --secondary-color: rgb(79, 24, 72);
    --primary-text-color: rgb(187, 38, 184);
    --secondary-text-color: rgb(255, 255, 255);
    --code-background-color: white;
    --code-text-color: black;
    --main-container-color: rgba(0,0,0,0.4); /* Determines what colour the background of the container that shows all content should be. Needs to be a color value!*/
    --background-repeat: repeat; /* How the background should repeat. See https://developer.mozilla.org/en-US/docs/Web/CSS/background-repeat*/
    --background-scale: 25%; /* What size the background should be. If you use a static background image, set to 1*/
    --background-position: top center; /* The position of the background. See https://developer.mozilla.org/en-US/docs/Web/CSS/background-position */
    --top-bar-icon-filter: ;/* What filters to apply to the icons in the top bar. Does not affect the main icon. For example, you can use this to invert the icons to fit better with the color palette. See https://developer.mozilla.org/en-US/docs/Web/CSS/filter */ 
    --font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; /* What fonts to use in priority order. You can also import additional fonts with @import.*/
    --color-scheme: light dark; /* The color scheme the browser should use when displaying this page. See https://developer.mozilla.org/en-US/docs/Web/CSS/color-scheme */
}

